--- a/package.json
+++ b/package.json
@@ -14,20 +14,26 @@
     "@emotion/styled": "^11",
     "@hookform/resolvers": "^2.8.8",
     "@types/sass": "^1.43.1",
+    "axios": "^0.26.1",
     "framer-motion": "^6",
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-hook-form": "^7.30.0",
+    "react-icons": "^4.3.1",
+    "react-query": "^3.35.0",
     "sass": "^1.50.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@faker-js/faker": "^6.1.2",
+    "@types/faker": "^6.6.9",
     "@types/node": "17.0.25",
     "@types/react": "18.0.5",
     "@types/react-dom": "18.0.1",
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.5",
+    "miragejs": "^0.1.43",
     "typescript": "4.6.3"
   }
 }
