--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^9.6.11",
     "framer-motion": "^6",
     "next": "12.1.5",
+    "qrcode.react": "^1.0.1",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-hook-form": "^7.30.0",
@@ -32,6 +33,7 @@
     "@types/node": "17.0.25",
     "@types/react": "18.0.5",
     "@types/react-dom": "18.0.1",
+    "@types/qrcode.react": "^1.0.2",
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.5",
     "miragejs": "^0.1.43",
