--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.1.7",
     "@chakra-ui/react": "^1.8.8",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
@@ -31,9 +32,9 @@
     "@faker-js/faker": "^6.1.2",
     "@types/faker": "^6.6.9",
     "@types/node": "17.0.25",
+    "@types/qrcode.react": "^1.0.2",
     "@types/react": "18.0.5",
     "@types/react-dom": "18.0.1",
-    "@types/qrcode.react": "^1.0.2",
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.5",
     "miragejs": "^0.1.43",
