feat: adicionado email ao cadastrar

--- a/.env
+++ b/.env
@@ -8,3 +8,7 @@ STORAGEBUCKET=kamikaze-week-a9429.appspot.com
 MESSAGINGSENDERID=1017277912357
 APPID=1:1017277912357:web:255d9886dd6c96f1ebb6cc
 MEASUREMENTID=G-3Q7YN3EX6Q
+
+## GMAIL
+EMAIL=andrewmasters08@hotmail.com
+PASSWORD=+-158326974Aa
