--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@hookform/resolvers": "^2.8.8",
     "@types/sass": "^1.43.1",
     "axios": "^0.26.1",
+    "emailjs": "^4.0.0",
     "firebase": "^9.6.11",
     "framer-motion": "^6",
     "next": "12.1.5",
