--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "18.0.0",
     "react-hook-form": "^7.30.0",
     "react-icons": "^4.3.1",
+    "react-qr-reader": "^2.2.1",
     "react-query": "^3.35.0",
     "sass": "^1.50.1",
     "yup": "^0.32.11"
@@ -36,6 +37,7 @@
     "@types/qrcode.react": "^1.0.2",
     "@types/react": "18.0.5",
     "@types/react-dom": "18.0.1",
+    "@types/react-qr-reader": "^2.1.4",
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.5",
     "miragejs": "^0.1.43",
